Finalizando configuração Swagger